# apcupsd

./: ChangeLog  INSTALL  Makefile  Makefile.in  README.md  ReleaseNotes  TODO  configure  kernstodo
apcupsd/: ChangeLog  Developers
autoconf/: Makefile.in  acconfig.h  aclocal.m4  autoregen.sh  config.h.in  configure.in  configure.in.jsj  targets.mak  variables.mak.in
binaries/: Apcupsd-3.14.14.dmg
branches/Branch-3_10_17/: ChangeLog
branches/Branch-3_12/: ChangeLog  ReleaseNotes  configure
branches/Branch-3_14/: ChangeLog  Makefile  ReleaseNotes  configure
branches/Branch-generic_usb/: configure
doc/: Makefile.in  README.apcaccess  apcupsd.conf.5  apcupsd.man
doc/developers_manual/: drivers.html
doc/docbook/: Makefile  appendix.hml  appendix.xml  bible.hml  cables.xml  config_examples.hml  config_examples.xml  events.xml  faq.xml  install.hml  install.kml  install.xml  maintaining.xml  manual.css  manual.hml  manual.html  manual.xml  master_slave.hml  monitoring.hml  monitoring.xml  post_install.xml  testing.xml  usage.hml
doc/home-page/: bugs.html  bugs.wml  dl.php  index.html  index.wml  license.html  lists.html  lists.wml  menu.inc  publishsite  support.html  support.wml  systems.html  template.inc
doc/images/: Makefile  image_scales  img12.eps  wininstall6.eps
doc/jobs/: cta_job.txt  webm_job.txt
doc/latex/: Makefile  apcupsd.perl  apcupsd.sty  apcupsd.tex  bacula.scales  cables.tex  charging.eps  html2latex  html2latex.tag  main_configs.eps  manual.html  manual.tex  multimon.eps  oldmanual.texi.save  online.eps  publishdoc  supportedoses.tex  supportedupses.tex  texi2latex.xsl  webtex2latex.tag  wininstall1.eps  wininstall2.eps
doc/manual/: Makefile  apcaccess.html  cables.html  cgiprogs.html  config-examples.html  configure.html  eprom.html  faq.html  index.html  install.html  kernel_config.html  logging.html  maintaining_ups.rst  manual.html  manual.rst  master-slave.html  multiUPS.html  new_features_3_10_4.html  new_features_3_7_0.html  new_features_3_8_0.html  new_features_3_8_3.html  new_features_3_9_8.html  publishdoc  quickstart.html  shutdown.html  smartprotocol.rst  snmp.html  status.html  stopping.html  testing.html  thanks.html  troubles.html
doc/old_documents/: ChangeLog-4.x-pre-merge  CodingStyle  README.NewerBackUPS-Pro  VUPS.txt  apcupsd-bug-1  autoconf  multi-ups-design.txt  using_minicom
doc/techlogs/: adk-3.11  kes-3.10.11  kes-3.10.13  kes-3.10.14  kes-3.10.15  kes-3.10.16  kes-3.10.17  kes-3.10.4  kes-3.10.6  kes-3.10.8  kes-3.10.9  kes-3.11  kes-3.11.0  kes11Dec02
doc/texi/: Makefile  manual.html  manual.texi  publishdoc
examples/: Makefile  Makefile.in  client.c  hid-ups.c  linux-2.4.20-alt-hidups.patch  linux-2.4.20-killpower.patch  megaclient.c  newslave.c  safe.apccontrol.in  smartsim.c  snoopdecode.c  upsapm.c
include/: Makefile.in  UpsValue.h  alist.h  amap.h  amutex.h  apc.h  apc_config.h  apc_defines.h  apc_drivers.h  apc_extern.h  apc_i18n.h  apc_struct.h  apc_winsem.h  aqueue.h  astring.h  athread.h  atimer.h  autil.h  defines.h  drivers.h  extern.h  statemachine.h  statmgr.h  struct.h  usb_common.h  version.h
src/: Makefile  Makefile.in  action.c  apcaccess.c  apcaction.c  apcdevice.c  apcnet.c  apcnet.c.new  apcnis.c  apcnisd.c  apcoptd.c  apctest.c  apcupsd.c  device.c  devicedbg.c  options.c  powerflute.c  reports.c  smtp.c
src/apcagent/: ActiveNumberFormatter.m  AppController.h  AppController.m  Info.plist  InstanceConfig.h  InstanceConfig.m  InstanceManager.h  InstanceManager.m  LoginItemsAE.h  MainMenu.nib  MainMenu.xib  Makefile  main.m
src/cgi/: Makefile  Makefile.in  cgiconfig.h.in  cgilib.c  cgilib.h  multimon.c  multimoncss.c  upsfetch.c  upsfstats.c  upsimage.c  upsstats.c
src/drivers/: Makefile  Makefile.in  drivers.c
src/gapcmon/: ChangeLog  Makefile  Makefile.in  eggtrayicon.c  eggtrayicon.h  gapcmon.c  gapcmon.desktop  gapcmon.h  gapcmon_common.h  gapcmon_gtkglgraph.c  gapcmon_gtkglgraph.h  gp_apcmon.c  gp_apcmon_core.c  gpanel_apcmon.c  gpanel_apcmon.schemas  gpanel_apcmon.server
src/lib/: HidUps.cpp  Makefile  Makefile.in  amutex.cpp  apcconfig.c  apcerror.c  apcevents.c  apcexec.c  apcfile.c  apcipc.c  apclibnis.c  apclist.c  apclock.c  apclog.c  apcsignal.c  apcstatus.c  apcwinipc.c  aqueue.cpp  astring.cpp  asys.c  athread.cpp  atimer.cpp  autil.cpp  cloexec.c  dummy.c  libsupc++fix.cpp  localtime_r.c  newups.c  sleep.c  statmgr.cpp  wincompat.c
src/libusbhid/: data.c  descr.c  parse.c  usage.c  usbcompat.h  usbhid.h
src/po/: Makefile.in  fr.po
src/win32/: Apctray.ini  InstallService.ini  Makefile.in  Makefile.mingw.in  README.mingw32  apctray.cpp  balloonmgr.cpp  build-win32-cross-tools  email.c  instmgr.cpp  instmgr.h  libusb-winusb-bridge.c  libusb-winusb-bridge.h  listview.cpp  listview.h  meter.cpp  meter.h  newwinservice.cpp  popup.c  resource.h  shutdown.c  statmgr.cpp  statmgr.h  winabout.cpp  winabout.h  winapcupsd.nsi  winapcupsd.nsi.in  winapi.h  winconfig.cpp  winconfig.h  winevents.cpp  winevents.h  winmain.cpp  winprop.h  winres.h  winres.rc  winservice.cpp  winservice.h  winstat.cpp  winstat.h  (+3 more)
tags/Beta-3_10_6-01May03/: configure
tags/Beta-3_10_6-12Sep03/: ChangeLog
tags/Beta-3_10_8-26Nov03/: ReleaseNotes
tags/Release-/: ChangeLog
tags/Release-3_10_10/: ReleaseNotes
tags/Release-3_10_11/: ChangeLog  ReleaseNotes
tags/Release-3_10_12/: configure
tags/Release-3_10_13/: INSTALL
tags/Release-3_10_14/: ChangeLog  configure
tags/Release-3_10_15/: ReleaseNotes
tags/Release-3_10_16-pre1/: ChangeLog  configure
tags/Release-3_10_17a/: Developers
tags/Release-3_10_18/: ChangeLog  ReleaseNotes  kernstodo
tags/Release-3_10_3/: ChangeLog  MANIFEST  Makefile.in  configure
tags/Release-3_10_6/: Makefile.in  ReleaseNotes
tags/Release-3_10_8/: COPYING  configure
tags/Release-3_10_9/: ChangeLog  ReleaseNotes
tags/Release-3_12_0/: ReleaseNotes
trunk/: .project  ChangeLog  Developers  INSTALL  MANIFEST  Makefile.in  ReleaseNotes  configure
trunk/autoconf/: acconfig.h  aclocal.m4  config.h.in  configure.in  targets.mak  variables.mak.in
(+1790 files in other folders)
